--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
--@import "scss/component/swiper.min.css";
+@import "scss/component/swiper.min.css";
 @import "scss/component/owl.carousel.min.css";
 @import "scss/component/owl.theme.default.min.css";
 @import "scss/component/css/fontawesome-all.css";
