--- a/style.css
+++ b/style.css
@@ -1,42 +1,96 @@
-/*
-Error: Invalid CSS after "...swiper.min.css"": expected "{", was ";"
-        on line 1 of style.scss
+@charset "UTF-8";
+@import url(scss/component/swiper.min.css);
+@import url(scss/component/owl.carousel.min.css);
+@import url(scss/component/owl.theme.default.min.css);
+@import url(scss/component/css/fontawesome-all.css);
+.swiper-container {
+  width: 100%;
+  height: 100%; }
 
-1: -@import "scss/component/swiper.min.css";
-2: @import "scss/component/owl.carousel.min.css";
-3: @import "scss/component/owl.theme.default.min.css";
-4: @import "scss/component/css/fontawesome-all.css";
-5: 
-6: @import "scss/layout/swiper-style.scss";
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  width: 100%;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center; }
+  .swiper-slide img {
+    width: 100%; }
 
-Backtrace:
-style.scss:1
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:1207:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:1137:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:1132:in `tok!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:665:in `block'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:658:in `ruleset'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:684:in `block_child'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:674:in `block_contents'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:125:in `stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/scss/parser.rb:41:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/engine.rb:409:in `_to_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/engine.rb:384:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/engine.rb:301:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/plugin.rb:82:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/exec/base.rb:52:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/lib/sass/exec/base.rb:19:in `parse!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.25/bin/scss:13:in `<top (required)>'
-/usr/local/bin/scss:23:in `load'
-/usr/local/bin/scss:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...swiper.min.css\"\": expected \"{\", was \";\"\A         on line 1 of style.scss\A \A 1: -@import \"scss/component/swiper.min.css\";\A 2: @import \"scss/component/owl.carousel.min.css\";\A 3: @import \"scss/component/owl.theme.default.min.css\";\A 4: @import \"scss/component/css/fontawesome-all.css\";\A 5: \A 6: @import \"scss/layout/swiper-style.scss\";"; }
+/*Breakpoints*/
+/*Alturas, márgenes*/
+.wo-height-section-m {
+  padding: 40px 0; }
+
+.wo-height-section-b {
+  padding: 80px 0; }
+
+.wo-nopadding-col {
+  padding: 0; }
+
+.wo-center {
+  text-align: center; }
+
+.icon-container i {
+  font-size: 3rem; }
+
+.section3 {
+  background: url("img/slide3.jpg") fixed center center;
+  height: 300px; }
+  .section3 .wo-title {
+    text-align: left; }
+
+.section6 {
+  background: url("img/slide2.jpg") fixed center center;
+  height: 300px; }
+
+.wo-form .wo-form-inline .form-control {
+  width: 68%; }
+  @media only screen and (max-width: 479px) {
+    .wo-form .wo-form-inline .form-control {
+      width: 100%; } }
+.wo-form .wo-form-inline .btn {
+  width: 28%; }
+  @media only screen and (max-width: 479px) {
+    .wo-form .wo-form-inline .btn {
+      width: 100%; } }
+
+.wo-overlay-effect {
+  position: relative; }
+  .wo-overlay-effect .caption {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity .25s linear;
+    -webkit-transition: opacity .25s linear;
+    -moz-transition: opacity .25s linear; }
+    .wo-overlay-effect .caption:hover {
+      opacity: 1;
+      background: rgba(62, 198, 255, 0.8);
+      content: "";
+      z-index: 0; }
+    .wo-overlay-effect .caption .wo-caption-text {
+      display: block;
+      top: 70%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      width: 100%;
+      position: absolute;
+      padding: 0 20px; }
+
+/*# sourceMappingURL=style.css.map */
