--- a/style.scss
+++ b/style.scss
@@ -4,4 +4,5 @@
 @import "scss/component/css/fontawesome-all.css";
 
 @import "scss/layout/swiper-style.scss";
+@import "scss/layout/icons.scss";
 @import "scss/layout/commons.scss";
