--- a/_includes/modIconoTitleText.html
+++ b/_includes/modIconoTitleText.html
@@ -1,5 +1,5 @@
 
-<div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
+<svg class="icon icon-display"><use xlink:href="#icon-display"></use></svg>
 
 <div class="caption wo-center">
     <h3>Web design</h3>
