vuelvo al original

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,11 @@
 
 <body>
 {% include header.html %}
+<section class="contenido">
+    <!--Slider-->
+    {% include slider.html %}
 
+</section>
 <div class="wrapper-footer">
     <div class="container">
         <footer class="footer">
@@ -12,6 +16,9 @@
         </footer>
     </div>
 </div>
+
+
+
 
 {% include analytics.html %}
 </body>
