vuelvo al original

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,52 @@
     <!--Slider-->
     {% include slider.html %}
 
+    <section class="section2 wo-height-section-m">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+
+                    {% include modIconoTitleText.html %}
+                </div>
+                <div class="col-md-3">
+
+                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
+
+                    <div class="caption wo-center">
+                        <h3>Web design</h3>
+                        <div class="text">
+                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+
+                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
+
+                    <div class="caption wo-center">
+                        <h3>Web design</h3>
+                        <div class="text">
+                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+
+                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
+
+                    <div class="caption wo-center">
+                        <h3>Web design</h3>
+                        <div class="text">
+                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 </section>
 <div class="wrapper-footer">
     <div class="container">
