--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,7 @@
                     {% include modIconoTitleText.html %}
                 </div>
                 <div class="col-md-3">
-
-                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
-
-                    <div class="caption wo-center">
-                        <h3>Web design</h3>
-                        <div class="text">
-                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
-                        </div>
-                    </div>
+                    {% include modIconoTitleText.html %}
                 </div>
                 <div class="col-md-3">
 
