--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -1,8 +1,3 @@
-/*Breakpoints*/
-
-$smartphones:"only screen and (max-width: 479px)";
-$tablets:"only screen and (max-width: 780px)";
-
 
 
 /*Alturas, márgenes*/
@@ -51,13 +46,13 @@ $tablets:"only screen and (max-width: 780px)";
   .wo-form-inline {
     .form-control {
        width: 68%;
-      @media #{$smartphones} {
+      @include media-breakpoint-up(xs) {
         width: 100%;
      }
       }
     .btn {
        width:28%;
-      @media #{$smartphones} {
+      @include media-breakpoint-up(xs) {
         width: 100%;
       }
     }
