--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-//Aquí están los estilos bootstrap originales y los míos sustituidos
-@import "scss/layout/custom";
+Aquí están los estilos bootstrap originales y los míos sustituidos
+@import "scss/layout/custom.scss";
 
 //Aquí los css de componentes descargados
 @import "scss/component/swiper.min.css";
@@ -7,6 +7,6 @@
 @import "scss/component/owl.theme.default.min.css";
 
 //Éstos son mis estilos
-@import "scss/layout/swiper-style";
-@import "scss/layout/icons";
-@import "scss/layout/commons";
+@import "scss/layout/swiper-style.scss";
+@import "scss/layout/icons.scss";
+@import "scss/layout/commons.scss";
