--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -1,7 +1,7 @@
-//Aquí sustituyo las clases de bootstrap
+/*Aquí sustituyo las clases de bootstrap*/
 
 
-// Required
+/* Required*/
 @import "../../bootstrap/scss/functions";
 @import "../../bootstrap/scss/variables";
 @import "../../bootstrap/scss/mixins";
