--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,12 @@
-Aquí están los estilos bootstrap originales y los míos sustituidos
+/*Aquí están los estilos bootstrap originales y los míos sustituidos*/
 @import "scss/layout/custom.scss";
 
-//Aquí los css de componentes descargados
+/*Aquí los css de componentes descargados*/
 @import "scss/component/swiper.min.css";
 @import "scss/component/owl.carousel.min.css";
 @import "scss/component/owl.theme.default.min.css";
 
-//Éstos son mis estilos
+/*Éstos son mis estilos*/
 @import "scss/layout/swiper-style.scss";
 @import "scss/layout/icons.scss";
 @import "scss/layout/commons.scss";
