--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -13,6 +13,7 @@
 @import "../../bootstrap/scss/code";
 @import "../../bootstrap/scss/grid";
 @import "../../bootstrap/scss/navbar";
+@import "../../bootstrap/scss/navbar";
 
 $theme-colors: (
         "primary": #3ec6ff,
