--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -12,7 +12,7 @@
 @import "../../bootstrap/scss/images";
 @import "../../bootstrap/scss/code";
 @import "../../bootstrap/scss/grid";
-@import "../../bootstrap/scss/navbar";
+@import "../../bootstrap/scss/nav";
 @import "../../bootstrap/scss/navbar";
 
 $theme-colors: (
