--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <!--Slider-->
     {% include slider.html %}
 
-    <section class="section2 wo-height-section-m">
+    <section class="wo-height-med">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -25,26 +25,10 @@
                     {% include modIconoTitleText.html %}
                 </div>
                 <div class="col-md-3">
-
-                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
-
-                    <div class="caption wo-center">
-                        <h3>Web design</h3>
-                        <div class="text">
-                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
-                        </div>
-                    </div>
+                    {% include modIconoTitleText.html %}
                 </div>
                 <div class="col-md-3">
-
-                    <div class="icon-container wo-center"><i class="material-icons dp48">announcement</i></div>
-
-                    <div class="caption wo-center">
-                        <h3>Web design</h3>
-                        <div class="text">
-                            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
-                        </div>
-                    </div>
+                    {% include modIconoTitleText.html %}
                 </div>
             </div>
         </div>
@@ -52,11 +36,16 @@
 
 
 
+
+
+
+
+
 </section>
 <div class="wrapper-footer">
     <div class="container">
         <footer class="footer">
-            {% include svg-icons.html %}
+
         </footer>
     </div>
 </div>
