--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -14,6 +14,9 @@
 @import "../../bootstrap/scss/grid";
 @import "../../bootstrap/scss/nav";
 @import "../../bootstrap/scss/navbar";
+@import "../../bootstrap/scss/dropdown";
+
+
 
 $theme-colors: (
         "primary": #3ec6ff,
