--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -6,7 +6,7 @@
 @import "../../bootstrap/scss/variables";
 @import "../../bootstrap/scss/mixins";
 
-@import "../../bootstrap/scss/root";
+/*Añado los que son necesarios*/
 @import "../../bootstrap/scss/reboot";
 @import "../../bootstrap/scss/type";
 @import "../../bootstrap/scss/images";
