--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,15 @@
 
 
 
+    <section class="wo-section-back wo-height-section-m  wo-center">
+        <div class="container">
+            <div class="wo-title"><h3>SUSCRIBE TO OUR NEWSLETTER</h3></div>
+            <div class="wo-form">
+                {% include form-news.html %}
+            </div>
 
+        </div>
+    </section>
 
 
 
