--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,28 @@
         </div>
     </section>
 
+    <section class="wo-height-section-b">
 
+        <div class="row">
+            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+
+                {% include overlay-effect.html %}
+            </div>
+            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+
+                {% include overlay-effect.html %}
+            </div>
+            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+
+                {% include overlay-effect.html %}
+            </div>
+            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+
+                {% include overlay-effect.html %}
+            </div>
+        </div>
+
+    </section>
 
 
 </section>
