--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -2,19 +2,19 @@
 
 
 /* Required*/
-@import "../../bootstrap/scss/functions";
-@import "../../bootstrap/scss/variables";
-@import "../../bootstrap/scss/mixins";
+@import "../../bootstrap/scss/_functions";
+@import "../../bootstrap/scss/_variables";
+@import "../../bootstrap/scss/_mixins";
 
 /*Añado los que son necesarios*/
-@import "../../bootstrap/scss/reboot";
-@import "../../bootstrap/scss/type";
-@import "../../bootstrap/scss/images";
-@import "../../bootstrap/scss/code";
-@import "../../bootstrap/scss/grid";
-@import "../../bootstrap/scss/nav";
-@import "../../bootstrap/scss/navbar";
-@import "../../bootstrap/scss/forms";
+@import "../../bootstrap/scss/_reboot";
+@import "../../bootstrap/scss/_type";
+@import "../../bootstrap/scss/_images";
+@import "../../bootstrap/scss/_code";
+@import "../../bootstrap/scss/_grid";
+@import "../../bootstrap/scss/_nav";
+@import "../../bootstrap/scss/_navbar";
+@import "../../bootstrap/scss/_forms";
 
 
 
