--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -1,7 +1,8 @@
 
 //Éstas son mis propias variables
 
-
+$smartphones:"only screen and (max-width: 479px)";
+$tablets:"only screen and (max-width: 780px)";
 
 
 /*Alturas, márgenes*/
@@ -50,13 +51,13 @@
   .wo-form-inline {
     .form-control {
        width: 68%;
-      @include media-breakpoint-up(xs) {
+        @media #{$smartphones} {
         width: 100%;
      }
       }
     .btn {
        width:28%;
-      @include media-breakpoint-up(xs) {
+      @media #{$smartphones} {
         width: 100%;
       }
     }
