--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -15,6 +15,7 @@
 @import "../../bootstrap/scss/_nav";
 @import "../../bootstrap/scss/_navbar";
 @import "../../bootstrap/scss/_forms";
+@import "../../bootstrap/scss/_buttons";
 
 
 
