--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,19 @@
 
     </section>
 
+    <section class="wo-height-section-m">
+        <div class="container">
+            <div class="wo-title wo-center"><h3>MEET OUR TEAM</h3></div>
+            <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
+
+                {% include carrousel.html %}
+            </div>
+        </div>
+
+        </div>
+    </section>
+
+
 
 </section>
 <div class="wrapper-footer">
