añado estilo botones bootstrap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
 
 
-    <section class="wo-section-back wo-height-section-m  wo-center">
+    <section class="wo-section-back wo-height-med wo-center">
         <div class="container">
             <div class="wo-title"><h3>SUSCRIBE TO OUR NEWSLETTER</h3></div>
             <div class="wo-form">
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section class="wo-height-section-b">
+    <section class="wo-height-big">
 
         <div class="row">
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
@@ -69,12 +69,11 @@
 
     </section>
 
-    <section class="wo-height-section-m">
+    <section class="wo-height-med">
         <div class="container">
             <div class="wo-title wo-center"><h3>MEET OUR TEAM</h3></div>
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
-
-                {% include carrousel.html %}
+                {% include carrusel.html %}
             </div>
         </div>
 
