--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -16,7 +16,7 @@
 @import "../../bootstrap/scss/_nav";
 @import "../../bootstrap/scss/_navbar";
 @import "../../bootstrap/scss/_forms";
-
+@import "../../bootstrap/scss/_transitions";
 
 
 
