--- a/style.css
+++ b/style.css
@@ -2174,6 +2174,29 @@ select.form-control-lg:not([size]):not([multiple]) {
     .form-inline .custom-control-label {
       margin-bottom: 0; } }
 
+.fade {
+  opacity: 0;
+  transition: opacity 0.15s linear; }
+  .fade.show {
+    opacity: 1; }
+
+.collapse {
+  display: none; }
+  .collapse.show {
+    display: block; }
+
+tr.collapse.show {
+  display: table-row; }
+
+tbody.collapse.show {
+  display: table-row-group; }
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease; }
+
 /*Aquí los css de componentes descargados*/
 /*Éstos son mis estilos*/
 .swiper-container {
