--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,24 @@
 <body>
 
 
-
+<script>
+    $('.owl-carousel').owlCarousel({
+        loop:true,
+        margin:10,
+        nav:true,
+        responsive:{
+            0:{
+                items:1
+            },
+            600:{
+                items:3
+            },
+            1000:{
+                items:5
+            }
+        }
+    })
+</script>
 {% include header.html %}
 
 
