añado js en el body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -198,6 +198,16 @@
 
 
 <script>
+    var swiper;
+    swiper = new Swiper('.swiper-container', {
+        navigation: {
+            pagination: '.swiper-pagination',
+            nextButton: '.swiper-button-next',
+            prevButton: '.swiper-button-prev',
+            height:900,
+            noSwiping: 'true'
+        },
+    });
     $('.owl-carousel').owlCarousel({
         loop:true,
         margin:10,
