añado js en el body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -184,6 +184,80 @@
         </div>
     </section>
 
+    <section class="wo-height-med wo-center">
+        <div class="container">
+            <i class="fab fa-facebook-f"></i>
+            <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
+            <div class="wo-text wo-center"><p>@Annie_Wrong</p></div>
+
+
+
+        </div>
+    </section>
+
+    <section class="wo-prices wo-height-big">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+
+                    <div class="wo-center">
+                        <div class="wo-plan">
+                            <h3>BASIC</h3>
+                            <p>$25/Month</p>
+                            <button class="btn btn-primary" type="button" value="Input">Buy this plan</button>
+                        </div>
+
+
+                        <ul class="list-group">
+                            <li class="list-group-item">Desing Talk</li>
+                            <li class="list-group-item">Drawings/li>
+                            <li class="list-group-item">Wireframes</li>
+                            <li class="list-group-item">2 Revisions</li>
+                            <li class="list-group-item">-</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+
+                    <div class="wo-center">
+                        <div class="wo-plan">
+                            <h3>BASIC</h3>
+                            <p>$25/Month</p>
+                            <button class="btn btn-primary" type="button" value="Input">Buy this plan</button>
+                        </div>
+
+
+                        <ul class="list-group">
+                            <li class="list-group-item">Desing Talk</li>
+                            <li class="list-group-item">Drawings/li>
+                            <li class="list-group-item">Wireframes</li>
+                            <li class="list-group-item">2 Revisions</li>
+                            <li class="list-group-item">-</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+
+                    <div class="wo-center">
+                        <div class="wo-plan">
+                            <h3>BASIC</h3>
+                            <p>$25/Month</p>
+                            <button class="btn btn-primary" type="button" value="Input">Buy this plan</button>
+                        </div>
+
+
+                        <ul class="list-group">
+                            <li class="list-group-item">Desing Talk</li>
+                            <li class="list-group-item">Drawings/li>
+                            <li class="list-group-item">Wireframes</li>
+                            <li class="list-group-item">2 Revisions</li>
+                            <li class="list-group-item">-</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </section>
