añado js en el body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 
     </section>
 
-    <section class="wo-height-med">
+    <section class="wo-section-back2 wo-height-med">
         <div class="container">
             <div class="wo-title wo-center"><h3>MEET OUR TEAM</h3></div>
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
