--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -41,7 +41,7 @@ $tablets:"only screen and (max-width: 780px)";
   }
 
 }
-.section6{
+.wo-section-back2{
   background: url("img/slide2.jpg") fixed center center;
   height:300px;
 
