--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -17,7 +17,7 @@
 @import "../../bootstrap/scss/_navbar";
 @import "../../bootstrap/scss/_forms";
 @import "../../bootstrap/scss/_transitions";
-
+@import "../../bootstrap/scss/_list-group";
 
 
 $theme-colors: (
