--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -1,11 +1,11 @@
 <section class="section1">
 
-    <!-- Swiper -->
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide" ><img src="img/slide2.jpg"></div>
-            <div class="swiper-slide" ><img src="img/slide1.jpg"></div>
-            <div class="swiper-slide" ><img src="img/slide3.jpg"></div>
+    <!-- Owl -->
+    <div class="">
+        <div id="owl-slider" class="owl-carousel owl-theme">
+            <div class="item" ><img src="img/slide2.jpg"></div>
+            <div class="item" ><img src="img/slide1.jpg"></div>
+            <div class="item" ><img src="img/slide3.jpg"></div>
 
         </div>
         <!-- Add Arrows -->
