añado slider owl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
             <div class="wo-title wo-center"><h3>MEET OUR TEAM</h3></div>
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
             </div>
-            <div id="#owl-carousel" class="owl-carousel owl-theme">
+            <div id="owl-carousel" class="owl-carousel owl-theme">
                 <div class="wo-overlay-effect">
                     <img class="img-fluid" src="img/car1.jpg">
                     <div class="caption wo-center">
