añado slider owl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -275,8 +275,8 @@
     $(document).ready(function() {
         $('#owl-slider').owlCarousel({
             items: 1,
-            margin: 10,
-            autoHeight: true
+            margin: 10
+
         });
     })
     $('#owl-carousel').owlCarousel({
