--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -275,7 +275,9 @@
     $(document).ready(function() {
         $('#owl-slider').owlCarousel({
             items: 1,
-            margin: 10
+            loop:true,
+            margin:10,
+            nav:true
 
         });
     })
