añado slider owl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,110 +74,15 @@
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
             </div>
             <div id="owl-carousel" class="owl-carousel owl-theme">
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car1.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car2.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car3.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car4.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car1.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car2.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car3.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="wo-overlay-effect">
-                    <img class="img-fluid" src="img/car4.jpg">
-                    <div class="caption wo-center">
-                        <div class="wo-caption-text">
-                            <h3>Web design</h3>
-                            <div class="icons">
-                                <i class="fab fa-facebook-f"></i>
-                                <i class="fab fa-twitter"></i>
-                                <i class="fab fa-pinterest-p"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html %}
+
             </div>
         </div>
 
@@ -210,7 +115,7 @@
 
                         <ul class="list-group">
                             <li class="list-group-item">Desing Talk</li>
-                            <li class="list-group-item">Drawings/li>
+                            <li class="list-group-item">Drawings</li>
                             <li class="list-group-item">Wireframes</li>
                             <li class="list-group-item">2 Revisions</li>
                             <li class="list-group-item">-</li>
