variables de titulo y texto

--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -2,8 +2,8 @@
 <svg class="icon icon-display"><use xlink:href="#icon-display"></use></svg>
 
 <div class="caption wo-center">
-    <h3>Web design</h3>
+    <h3>{{ include.title }}</h3>
     <div class="text">
-        <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
+        <p>{{ include.text }}</p>
     </div>
 </div>
