--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,16 +18,16 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    {% include modIconoTitleText.html %}
+                    {% include icon-title-text.html title="This is my sample note." text="Hola que tal"%}
                 </div>
                 <div class="col-md-3">
-                    {% include modIconoTitleText.html %}
+                    {% include icon-title-text.html %}
                 </div>
                 <div class="col-md-3">
-                    {% include modIconoTitleText.html %}
+                    {% include icon-title-text.html %}
                 </div>
                 <div class="col-md-3">
-                    {% include modIconoTitleText.html %}
+                    {% include icon-title-text.html %}
                 </div>
             </div>
         </div>
