--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,16 +18,16 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    {% include icon-title-text.html title="This is my sample note." text="Hola que tal"%}
+                    {% include icon-title-text.html title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
                 </div>
                 <div class="col-md-3">
-                    {% include icon-title-text.html %}
+                    {% include icon-title-text.html  title="Graphic Design" text="Fusce orci ligula, dignissim sit amet tincidunt non, tristique varius nulla."%}
                 </div>
                 <div class="col-md-3">
-                    {% include icon-title-text.html %}
+                    {% include icon-title-text.html  title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cursus nisi vel odio dapibus."%}
                 </div>
                 <div class="col-md-3">
-                    {% include icon-title-text.html %}
+                    {% include icon-title-text.html  title="Copywritting" text="Non pharetra sem ultrices. Vivamus cursus risus sit amet volutpat cursus."%}
                 </div>
             </div>
         </div>
