variables de titulo y texto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,19 @@
 
 <section class="content">
     <!--Slider-->
-    {% include slider.html %}
+    <section class="slider">
+
+        <!-- Owl -->
+
+        <div id="owl-slider" class="owl-carousel owl-theme">
+            {% include slider-item.html %}
+            {% include slider-item.html %}
+            {% include slider-item.html %}
+        </div>
+
+
+
+    </section>
 
     <section class="wo-height-med">
         <div class="container">
