--- a/style.css
+++ b/style.css
@@ -2448,6 +2448,13 @@ tbody.collapse.show {
 .icon-container i {
   font-size: 3rem; }
 
+.slider .item {
+  position: relative; }
+  .slider .item .caption {
+    opacity: 0;
+    position: absolute;
+    top: 0; }
+
 .wo-section-back {
   background: url("img/slide3.jpg") fixed center center;
   height: 300px; }
