--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -32,9 +32,11 @@ $tablets:"only screen and (max-width: 780px)";
   .item{
     position: relative;
     .caption {
-      opacity: 0;
       position: absolute;
       top: 0;
+      padding: 20px 60px;
+      text-align:center;
+
     }
   }
 }
