--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -33,8 +33,11 @@ $tablets:"only screen and (max-width: 780px)";
     position: relative;
     .caption {
       position: absolute;
-      top: 0;
-      padding: 20px 60px;
+      top: 50%;
+      left: 50%;
+      height: 30%;
+      width: 50%;
+      margin: -15% 0 0 -25%;
       text-align:center;
 
     }
