--- a/_includes/slider-item.html
+++ b/_includes/slider-item.html
@@ -1,10 +1,10 @@
 <div class="item" >
-    <img class="img-fluid" src="img/slide2.jpg">
+    <img class="img-fluid" src="{{ include.image }}">
     <div class="caption wo-center">
         <div class="wo-caption-text">
-            <h2>AMAZING NEW</h2>
-            <h3>DESIGN AGENCY</h3>
-            <h2>TO CREATE YOUR PROJECT</h2>
+            <h2>{{ include.pretitle }}</h2>
+            <h3>{{ include.title }}</h3>
+            <h2>{{ include.subtitle }}</h2>
         </div>
     </div>
 </div>
