variables de titulo y texto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
         <!-- Owl -->
 
         <div id="owl-slider" class="owl-carousel owl-theme">
-
+            {% include slider-item.html  image="img/slide2.jpg" pretitle="AMAZING NEW" title="DESIGN AGENCY" subtitle="TO CREATE YOUR PROJECT" %}
+            {% include slider-item.html  image="img/slide1.jpg" pretitle="LOREM IPSUM" title="CONSECTETUR ADISPISCING" subtitle="BIBENDUM TORTOR" %}
+            {% include slider-item.html  image="img/slide3.jpg" pretitle="DOLOR SIT MET" title="DONEC CONDIMENTUM" subtitle="QUSQUE CURSUS NISI" %}
         </div>
 
 
