variables de titulo y texto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,24 +12,18 @@
 <section class="content">
     <!--Slider-->
     <section class="slider">
-
         <!-- Owl -->
-
         <div id="owl-slider" class="owl-carousel owl-theme">
             {% include slider-item.html  image="img/slide2.jpg" pretitle="AMAZING NEW" title="DESIGN AGENCY" subtitle="TO CREATE YOUR PROJECT" %}
             {% include slider-item.html  image="img/slide1.jpg" pretitle="LOREM IPSUM" title="CONSECTETUR ADISPISCING" subtitle="BIBENDUM TORTOR" %}
             {% include slider-item.html  image="img/slide3.jpg" pretitle="DOLOR SIT MET" title="DONEC CONDIMENTUM" subtitle="QUSQUE CURSUS NISI" %}
         </div>
-
-
-
     </section>
 
     <section class="wo-height-med">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-
                     {% include icon-title-text.html title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
                 </div>
                 <div class="col-md-3">
@@ -62,19 +56,19 @@
         <div class="row">
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html %}
+                {% include overlay-effect.html image="img/overlay1.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet"  %}
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html %}
+                {% include overlay-effect.html image="img/overlay2.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html %}
+                {% include overlay-effect.html image="img/overlay3.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html %}
+                {% include overlay-effect.html image="img/overlay4.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
             </div>
         </div>
 
