--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,10 +1,10 @@
-<img class="img-fluid" src="img/overlay1.jpg">
+<img class="img-fluid" src="{{ include.image }}">
 
 <div class="caption wo-center" href="#">
     <div class="wo-caption-text">
-        <h3>Web design</h3>
+        <h3>{{ include.title }}</h3>
         <div class="text">
-            <p>We are making web design, code your websites and create a Wordpress themes as well.</p>
+            <p>{{ include.text }}</p>
         </div>
     </div>
 
