variables de titulo y texto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,11 +56,11 @@
         <div class="row">
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html image="img/overlay1.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet"  %}
+                {% include overlay-effect.html image="img/overlay1.jpg" title="ALWAYS ON TIME" text="Lorem ipsum dolor sit amet"  %}
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html image="img/overlay2.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
+                {% include overlay-effect.html image="img/overlay2.jpg" title="THE SECRET OF THE BEAR" text="Lorem ipsum dolor sit amet" %}
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
 
-                {% include overlay-effect.html image="img/overlay4.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
+                {% include overlay-effect.html image="img/overlay4.jpg" title="WE BUILD" text="Lorem ipsum dolor sit amet" %}
             </div>
         </div>
 
