variables de titulo y texto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,16 +23,16 @@
     <section class="wo-height-med">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col col-md-3 col-sm-6">
                     {% include icon-title-text.html title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
                 </div>
-                <div class="col-md-3">
+                <div class="col col-md-3 col-sm-6">
                     {% include icon-title-text.html  title="Graphic Design" text="Fusce orci ligula, dignissim sit amet tincidunt non, tristique varius nulla."%}
                 </div>
-                <div class="col-md-3">
+                <div class="col col-md-3 col-sm-6">
                     {% include icon-title-text.html  title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cursus nisi vel odio dapibus."%}
                 </div>
-                <div class="col-md-3">
+                <div class="col col-md-3 col-sm-6">
                     {% include icon-title-text.html  title="Copywritting" text="Non pharetra sem ultrices. Vivamus cursus risus sit amet volutpat cursus."%}
                 </div>
             </div>
@@ -54,19 +54,19 @@
     <section class="wo-height-big">
 
         <div class="row">
-            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay1.jpg" title="ALWAYS ON TIME" text="Lorem ipsum dolor sit amet"  %}
             </div>
-            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay2.jpg" title="THE SECRET OF THE BEAR" text="Lorem ipsum dolor sit amet" %}
             </div>
-            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay3.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
             </div>
-            <div class="col-md-3 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay4.jpg" title="WE BUILD" text="Lorem ipsum dolor sit amet" %}
             </div>
@@ -109,7 +109,7 @@
     <section class="wo-prices wo-height-big">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col col-md-4">
 
                     <div class="wo-center">
                         <div class="wo-plan">
@@ -128,7 +128,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col col-md-4">
 
                     <div class="wo-center">
                         <div class="wo-plan">
@@ -147,7 +147,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col col-md-4">
 
                     <div class="wo-center">
                         <div class="wo-plan">
