--- a/style.css
+++ b/style.css
@@ -2507,4 +2507,15 @@ tbody.collapse.show {
       position: absolute;
       padding: 0 20px; }
 
+.wo-section-map-form {
+  position: relative; }
+  .wo-section-map-form .wo-form-contact {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -8% 0 0 -25%;
+    text-align: left; }
+
 /*# sourceMappingURL=style.css.map */
