--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,19 +54,19 @@
     <section class="wo-height-big">
 
         <div class="row">
-            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6  col-xs-12 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay1.jpg" title="ALWAYS ON TIME" text="Lorem ipsum dolor sit amet"  %}
             </div>
-            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6  col-xs-12 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay2.jpg" title="THE SECRET OF THE BEAR" text="Lorem ipsum dolor sit amet" %}
             </div>
-            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6  col-xs-12 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay3.jpg" title="ONE DAY IN LIFE" text="Lorem ipsum dolor sit amet" %}
             </div>
-            <div class="col col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
+            <div class="col col-md-3 col-sm-6  col-xs-12 wo-nopadding-col wo-overlay-effect">
 
                 {% include overlay-effect.html image="img/overlay4.jpg" title="WE BUILD" text="Lorem ipsum dolor sit amet" %}
             </div>
@@ -177,10 +177,13 @@
    </section>
 
 </section>
-<div class="wrapper-footer">
+
+
+
+<div class="footer">
     <div class="container">
         <footer class="footer">
-
+            <p>Made width love by Toya Llorca</p>
         </footer>
     </div>
 </div>
