--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,24 +1,12 @@
 <form>
-    <div class="form-group">
-        <label >Email address</label>
-        <input type="" class="form-control"  >
 
-    </div>
-    <div class="form-group">
-        <label >Password</label>
-        <input class="form-control"  placeholder="">
-    </div>
-    <div class="form-group">
-        <label >Password</label>
-        <input class="form-control"  placeholder="">
-    </div>
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <div class="form-group">
-        <label >Example textarea</label>
-        <textarea class="form-control" ></textarea>
-    </div>
+        <input class="form-control" placeholder="E-mail" >
+
+        <input class="form-control"  placeholder="Phone">
+
+        <input class="form-control"  placeholder="Subject">
+
+        <textarea class="form-control"  placeholder="Message"></textarea>
+
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
